--- a/browser/index.html
+++ b/browser/index.html
@@ -18,9 +18,9 @@
             let tree    = Grammar.parser(grammar);
             tree.parse(str, "start", lexer);
             console.info(">> isOver: " + tree.isOver());
-            console.info(">> build tree ...");
-            console.info(">> print tree :");
-            tree.printTree(tree.getTree());
+            // console.info(">> build tree ...");
+            // console.info(">> print tree :");
+            // tree.printTree(tree.getTree());
             let data = tree.getTreeJson();
             drawTree(data);
             tree.listen({
