--- a/browser/index.html
+++ b/browser/index.html
@@ -11,12 +11,28 @@
     <script type="text/javascript">
         function main() {
             console.info(">> parser running...");
-            let str     = "show xxx when a = 12 and (b != 9 and c < 74)";
-            let words   = "skip: ^[ ]\nFIELD: ^[a-zA-Z_][a-zA-Z0-9_]*\nSHOW: ^(show|SHOW)\n\nWHEN: ^(when|WHEN)\nAND: ^and\nLP: ^\\(\nRP: ^\\)\nOP: ^(=|!=|>|>=|<|<=)\nVALUE: ^[0-9]+";
-            let grammar = "start: SHOW FIELD WHEN expr;\nexpr: expr AND atom | atom;\natom: LP expr RP | FIELD OP VALUE";
+            let str     = "show xxx when a = 12 and (b != -9.09 or c < -74) or (d = 43.00 and e != \"hello \\\"oh\")";
+            let words   = "skip: ^[ ]\n" +
+                "FIELD: ^[a-zA-Z_][a-zA-Z0-9_]*\n" +
+                "SHOW: ^(show|SHOW)\n" +
+                "WHEN: ^(when|WHEN)\n" +
+                "AND: ^(and|AND)\n" +
+                "OR: ^(or|OR)\n" +
+                "LP: ^\\(\n" +
+                "RP: ^\\)\n" +
+                "OP: ^(=|!=|>=|>|<=|<)\n" +
+                "VALUE: ^(((-)?([0-9]+\\.)?[0-9]+)|('((\\\\')|[^'])*')|(\"((\\\\\")|[^\"])*\"))";
+            let grammar = "start: SHOW FIELD WHEN expr;\n" +
+                "expr: expr OR andExpr | andExpr;\n" +
+                "andExpr: andExpr AND atom | atom;\n" +
+                "atom: LP expr RP | FIELD OP VALUE;";
             let lexer   = Grammar.lexer(words);
             let tree    = Grammar.parser(grammar);
-            tree.parse(str, "start", lexer);
+            try {
+                tree.parse(str, "start", lexer);
+            } catch (e) {
+                console.error(e);
+            }
             console.info(">> isOver: " + tree.isOver());
             // console.info(">> build tree ...");
             // console.info(">> print tree :");
