--- a/browser/lea.html
+++ b/browser/lea.html
@@ -13,27 +13,30 @@
 <label for="str">main.lea</label>
 <br>
 <textarea id="str" cols="150" rows="40" spellcheck="false">
-    import os;
-    import sys;
+import os;
+import sys;
 
-    class Main {
-        val uid: int;
+class Main {
+    val uid: int;
 
-        private val type: string;
+    private val type: string;
 
-        def main() {
-            var x: int = 12;
-            var s: string = "text";
-            s = "another text";
-            s = "text_" + x;
-            s = getName();
-            s = makeName(x);
-            Main.method01();
-            1 + 32;
-            clazz.method()[12];
-            add(s, x2, x3, 3+ x4);
-        }
+    def main() {
+        var x: int = 12;
+        x = apply<>();
+        x = apply<string>();
+        x = apply<number, 12>();
+        var s: string = "text";
+        s = "another text";
+        s = "text_" + x;
+        s = getName();
+        s = makeName(x);
+        Main.method01();
+        1 + 32;
+        clazz.method()[12];
+        add(s, x2, x3, 3+ x4);
     }
+}
 
 </textarea>
 <br>
@@ -143,6 +146,8 @@ rvNotValue
 
 rvInvokingValue
     : rvInvokingValue LSB rv RSB
+    | rvInvokingValue LT GT
+    | rvInvokingValue LT argsList GT
     | rvInvokingValue LP RP
     | rvInvokingValue LP argsList RP
     | rvInvokingValue DOT rvAtomValue
@@ -184,6 +189,8 @@ arg
             "OR: ^(\\|\\|)\n" +
             "AND: ^(&&)\n" +
             "EQ: ^(=)\n" +
+            "LT: ^(<)\n" +
+            "GT: ^(>)\n" +
             "COMMA: ^(,)\n" +
             "SEMI: ^;\n" +
             "COLON: ^:\n" +
